<resources>
    <string name="app_name">NaviDoc</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="nav_application_section">Application Section</string>
    <string name="nav_user_section">User Section</string>
    <string name="nav_settings">Settings</string>
    <string name="menu_current_location">Current Location</string>
    <string name="menu_places">Places</string>
    <string name="searching_field">Search for concrete department</string>
    <string name="toastik">searching</string>
    <string name="subtitle_item">Name, Department</string>
    <string name="navigate_item">Navigate</string>
    <string name="places_activity">Places</string>
    <string name="detail_activity">Detail</string>
    <string name="ambulance">Ambulance</string>
    <string name="department">Department</string>
    <string name="doctors_name">Doctor\'s name</string>
    <string name="floor">Floor</string>
    <string name="office_hours">Office hours</string>
    <string name="phone_number">Phone number</string>
    <string name="website_url">Website URL</string>
    <string name="works">Works</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="no_results">No results were found</string>
    <string name="toast">Toast</string>
    <string name="add_to_fav">Added to favourite</string>
    <string name="rem_from_fav">Removed from favourite</string>
    <string name="tap_to_navigate">Tap to navigate</string>
    <string name="my_places">My places</string>
    <string name="scan_bttn">Scan for devices</string>
    <string name="foreground_scan_description">Scanning activity</string>
    <string name="start_scanning_service">start scanning</string>
    <string name="stop_scanning_service">stop scanning</string>
    <string name="distance">Distance</string>
    <string name="address">Address</string>
    <string name="unique_id">Unique ID</string>
    <string name="uknown_id">Unknown id</string>
    <string name="no_beacons_close">There is no beacons close to your phone.\nSearching for others</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="navigate_to">Do you want launch navigation to </string>
    <string name="go_to_places">Go to places</string>
    <string name="button_no_clicked">Button \'No\' was clicked</string>
    <string name="venue_name">Venue name</string>
    <string name="bluetooth_is_off">Bluetooth is Off</string>
    <string name="sentence_bluetooth">Bluetooth is currently off. Please turn it on to start scanning for Kontakt.io devices</string>
    <string name="loading_device">Looking for devices</string>
    <string name="sentece_loading">Please wait a second or two for the discovery service to start</string>
    <string name="doctor_not_available">Doctor is not available</string>
    <string name="centimeters">centimeters</string>
    <string name="meter">meter</string>
    <string name="meters">meters</string>
    <string name="unavailable_location">This location is current not available</string>
    <string name="u_have_reached_dest">You have reached your destination</string>
    <string name="new_hop">New hop</string>
    <string name="already_here">Already at the location</string>
</resources>