<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <item
        android:title="@string/nav_application_section"
        android:id="@+id/nav_application_section">
        <menu>
            <group android:checkableBehavior="single" >

                <item
                    android:id="@+id/nav_home"
                    android:icon="@drawable/ic_home"
                    android:title="@string/menu_home"
                    app:itemTextColor="@color/secondary_black_LM" />

                <item
                    android:id="@+id/nav_my_places"
                    android:icon="@drawable/ic_star"
                    android:title="@string/my_places"
                    app:itemTextColor="@color/secondary_black_LM" />

                <item
                    android:id="@+id/nav_current_location"
                    android:icon="@drawable/ic_current_place"
                    android:title="@string/menu_current_location"
                    app:itemTextColor="@color/secondary_black_LM"/>

                <item
                    android:id="@+id/nav_places"
                    android:icon="@drawable/ic_map"
                    android:title="@string/menu_places"
                    app:itemTextColor="@color/secondary_black_LM"/>
                <item
                    android:id="@+id/nav_history"
                    android:icon="@drawable/ic_map"
                    android:title="History"
                    app:itemTextColor="@color/secondary_black_LM"/>

            </group>
        </menu>
    </item>

    <item
        android:title="@string/nav_user_section"
        app:itemTextColor="@color/secondary_black_LM"
        android:id="@+id/nav_user_section">
        <menu>
            <group android:checkableBehavior="single" >

                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/nav_settings"
                    app:itemTextColor="@color/secondary_black_LM"/>
            </group>
        </menu>
    </item>
</menu>