<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_detail"
    android:paddingLeft="30dp"
    android:paddingRight="30dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/ambulance"
            android:paddingTop="10dp"
            android:text="@string/ambulance"
            android:textColor="@color/primary_blue_LM"
            android:textSize="14sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/ambulance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:textColor="@color/secondary_black_LM" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/department"
                android:textColor="@color/primary_blue_LM"
                android:textSize="14sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/floor"
                android:textColor="@color/primary_blue_LM"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/department"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:textColor="@color/secondary_black_LM" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/floor"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:textColor="@color/secondary_black_LM" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/doctors_name"
            android:textColor="@color/primary_blue_LM"
            android:textSize="14sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/doctors_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:textColor="@color/secondary_black_LM" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/office_hours"
            android:textColor="@color/primary_blue_LM"
            android:textSize="14sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/office_hours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:textColor="@color/secondary_black_LM" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/phone_number"
            android:textColor="@color/primary_blue_LM"
            android:textSize="14sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:enabled="false"
            android:textColor="@color/secondary_black_LM" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/website_url"
            android:textColor="@color/primary_blue_LM"
            android:textSize="14sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/website_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:enabled="false"
            android:linksClickable="true"
            android:textColor="@color/secondary_black_LM"
            android:textColorLink="@color/primary_blue_LM" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="30dp"
        android:paddingBottom="30dp">
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/appCompatImageButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/ic_nav_skuska"
            android:backgroundTint="@color/primary_orange_button_LM"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.756"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.appcompat.widget.AppCompatImageButton

            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/ic_arrow"
            android:backgroundTint="@color/secondary_darkergrey_DM"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/appCompatImageButton"
            app:layout_constraintHorizontal_bias="0.475"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>





